--- a/Automated-storage/multi-deep-shuttle.html
+++ b/Automated-storage/multi-deep-shuttle.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Automated Storage</title>
+    <title>Multi deep Shuttle</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -17,13 +17,13 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="automated-storage.css" />
+    <link rel="stylesheet" href="palete.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="container container-nav">
         <a class="navbar-brand" href="#">
-          <img src="logo2.png" alt="Bootstrap" width="30" height="24" />
+          <img src="../logo2.png" alt="Bootstrap" width="30" height="24" />
         </a>
         <!-- <a href="javascript:void(0);" class="hamburger-icon" onclick="toggleMenu()">
           <i class="fa-solid fa-bars"></i>
@@ -166,84 +166,170 @@
         </div>
       </div>
     </nav>
-    <header class="header">
-      <div class="overlay">
-        <h1>Automated Storage and Retrieval Systems</h1>
-        <p>Home / Automated Storage Systems</p>
+    <div class="float">
+      <ul>
+        <li><a href="">hello</a></li>
+        <li><a href="">hello</a></li>
+        <li><a href="">hello</a></li>
+        <li><a href="">hello</a></li>
+      </ul>
+    </div>
+    <div class="container">
+      <div class="asrs-container">
+        <h1 class="asrs-title">Multi-deep Shuttle ASRS</h1>
+        <p class="asrs-description">
+          Multi-deep Pallet Shuttle ASRS is a revolutionary multi-deep Automated
+          storage system for Pallets, comprising multiple types of equipment
+          working in tandem:
+        </p>
+        <ul class="asrs-list">
+          <li>Ultra-capacitor-powered pallet shuttle</li>
+          <li>Shuttle-carrier</li>
+          <li>Pallet lifter</li>
+          <li>Buffer conveyors</li>
+        </ul>
       </div>
-    </header>
+      <div class="imgsp">
+        <img src="multi-deep-shuttle-asrs-features.webp" alt="" />
+      </div>
+      <div class="content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus mollitia dicta quas repellat, dolorem quos?</p>
+      </div>
 
-    <main>
-      <section class="content">
-        <div class="text-section">
-          <h2>Pallet ASRS</h2>
-          <p>
-            Storage solutions designed for <b>Automated Storage</b> and
-            retrieval of palletized goods. Pallets are heavy and
-            energy-intensive to store and retrieve. Warehouses storing pallets
-            need automated solutions that maximize throughput and storage
-            density, while at the same time reducing energy consumption and
-            cost. We at Craftsman deliver tailored automated retrieval solutions
-            around your business storage needs.
-          </p>
-          <button>learn more</button>
+      <div class="features">
+        <div class="feature-item">
+          <img src="image.png" alt="Automated Storage Icon" />
+          <p>100% automated storage operations</p>
         </div>
-        <div class="image-section">
-          <img
-            src="images/warehouse.webp"
-            width="800"
-            height="480"
-            alt="Warehouse Image"
-          />
+        <div class="feature-item">
+          <img src="image.png" alt="Safe Pallet Handling Icon" />
+          <p>Safe and efficient pallet handling</p>
         </div>
-      </section>
-      <section class="content">
-        <div class="image-section">
-          <img
-            src="images/warehouse.webp"
-            width="800"
-            height="480"
-            alt="Warehouse Image"
-          />
+        <div class="feature-item">
+          <img src="image.png" alt="Safe Pallet Handling Icon" />
+          <p>Safe and efficient pallet handling</p>
         </div>
-        <div class="text-section">
-          <h2>Pallet ASRS</h2>
-          <p>
-            Storage solutions designed for <b>Automated Storage</b> and
-            retrieval of palletized goods. Pallets are heavy and
-            energy-intensive to store and retrieve. Warehouses storing pallets
-            need automated solutions that maximize throughput and storage
-            density, while at the same time reducing energy consumption and
-            cost. We at Craftsman deliver tailored automated retrieval solutions
-            around your business storage needs.
-          </p>
-          <button>learn more</button>
+      </div>
+
+      <!-- <div class="iconslider">
+      <div class="slides">
+        <img src="multi-deep-shuttle-asrs-features.webp" alt="">
+        <p></p>
+      </div>
+    </div> -->
+
+      <div
+        id="carouselExampleAutoplaying"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="multi-deep-shuttle-asrs-features.webp"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="multi-deep-shuttle-asrs-features.webp"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="multi-deep-shuttle-asrs-features.webp"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
         </div>
-      </section>
-      <section class="content">
-        <div class="text-section">
-          <h2>Pallet ASRS</h2>
-          <p>
-            Storage solutions designed for <b>Automated Storage</b> and
-            retrieval of palletized goods. Pallets are heavy and
-            energy-intensive to store and retrieve. Warehouses storing pallets
-            need automated solutions that maximize throughput and storage
-            density, while at the same time reducing energy consumption and
-            cost. We at Craftsman deliver tailored automated retrieval solutions
-            around your business storage needs.
-          </p>
-          <button>learn more</button>
+        <!-- <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button> -->
+        <!-- <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button> -->
+      </div>
+    </div>
+
+    <div
+      id="carouselExampleAutoplaying"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="..." class="d-block w-100" alt="..." />
         </div>
-        <div class="image-section">
-          <img
-            src="images/warehouse.webp"
-            width="800"
-            height="480"
-            alt="Warehouse Image"
-          />
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="..." />
         </div>
-      </section>
-    </main>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <div class="advantages-section">
+      <div class="advantages-text">
+        <h2>Advantages</h2>
+        <ul>
+          <li>100% automated storage operations</li>
+          <li>Quick access and faster delivery times</li>
+          <li>Optimized space utilization</li>
+          <li>Multi-deep storage</li>
+          <li>High throughputs for a large range of goods</li>
+          <li>Optimum Sequencing of material</li>
+          <li>Simple machine control with plug & play solutions for faster commissioning</li>
+          <li>Optimum solutions for all unit loads owing to load handling attachments</li>
+          <li>Safe and efficient pallet handling</li>
+          <li>Ensured reliability</li>
+        </ul>
+      </div>
+      <div class="advantages-video">
+        <div class="video-thumbnail">
+          <img src="multi-deep-shuttle-racking-intro.webp" alt="Video Thumbnail">
+          <button class="play-button">
+            <img src="play-icon.png" alt="Play Button">
+          </button>
+        </div>
+        <a href="#" class="view-demo">View Demo &rarr;</a>
+      </div>
+    </div>
+
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-column">
